--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/study
-    username: luffy
-    password: 1354
+    username: root
+    password: 081203
     driver-class-name: com.mysql.cj.jdbc.Driver
   sql:
     init:
