--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation' // 7주차 추가 gradle
 	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'
 	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' // 8주차 추가 gradle
+	implementation 'org.springframework.boot:spring-boot-starter-validation' // 8주차 추가 gradle
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
